# pythonCourse2

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: hhapi.py  vacancies.py  vacancies_work.py
tests/: test_hhapi.py  test_utils.py  test_vacancies.py  test_vacancies_work.py
utils/: utils.py
